setting context-path preparing html and css

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,5 @@
+server:
+  servlet:
+    context-path: /backend-for-frontend
 service:
   dns: http://internal-ma-osawa-private-79736240.ap-northeast-1.elb.amazonaws.com
